[package]
name = "flatgeobuf-gpu"
version = "0.1.0"
authors = ["Pirmin Kalberer <pka@sourcepole.com>"]
edition = "2018"

[dependencies]
flatgeobuf = "0.3.1"
gl = "0.14"
sdl2 = "0.33"
sdl2-sys = "0.33"
pathfinder_canvas = { git = "https://github.com/servo/pathfinder/" }
pathfinder_color = { git = "https://github.com/servo/pathfinder/" }
pathfinder_content = { git = "https://github.com/servo/pathfinder/" }
pathfinder_geometry = { git = "https://github.com/servo/pathfinder/" }
pathfinder_gl = { git = "https://github.com/servo/pathfinder/" }
pathfinder_gpu = { git = "https://github.com/servo/pathfinder/" }
pathfinder_renderer = { git = "https://github.com/servo/pathfinder/" }
pathfinder_resources = { git = "https://github.com/servo/pathfinder/" }
pathfinder_ui = { git = "https://github.com/servo/pathfinder/" }
