[package]
name = "flatgeobuf-gpu"
version = "0.1.0"
authors = ["Pirmin Kalberer <pka@sourcepole.com>"]
edition = "2018"

[dependencies]
flatgeobuf = "0.3.3"
geozero = "0.5"
gl = "0.14"
sdl2 = "0.33"
sdl2-sys = "0.33"
pathfinder_canvas = "0.5"
pathfinder_color = "0.5"
pathfinder_content = "0.5"
pathfinder_geometry = "0.5"
pathfinder_gl = "0.5"
pathfinder_gpu = "0.5"
pathfinder_renderer = "0.5"
pathfinder_resources = "0.5"
pathfinder_ui = "0.5"
